--- a/main.html
+++ b/main.html
@@ -10,6 +10,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h2>Shopping List</h2>
+  <ol data-ns-test="shoppingList">
+    <li data-ns-test="shoppingList">New Laptop</li>
+    <li data-ns-test="shoppingList">Gaming Console</li>
+    <li data-ns-test="shoppingList">Smartphone</li>
+  </ol>
+
+  <h2>Holiday Destinations</h2>
+  <ul data-ns-test="holidayList">
+    <li data-ns-test="holidayList">Maldives</li>
+    <li data-ns-test="holidayList">Paris</li>
+    <li data-ns-test="holidayList">Dubai</li>
+  </ul>
 
 </body>
 
